fixed alignment

--- a/css/_layout.scss
+++ b/css/_layout.scss
@@ -7,7 +7,6 @@
     "bar     bar    bar"
     ".     main    .";
     height: 100vh;
-    margin: 2em;
 }
 
 
