--- a/css/main.scss
+++ b/css/main.scss
@@ -6,3 +6,12 @@ body {
     background-color: #292929;
     color: #ffffff;
 }
+
+nav {
+    background-color: #185bc0;
+    text-align: center;
+    
+    ul {
+        display: inline-block;
+    }
+}
